--- a/templates/order/orderemail.html
+++ b/templates/order/orderemail.html
@@ -222,7 +222,7 @@ a[x-apple-data-detectors] {
                  </tr>
                </table></td>
              </tr>
-             {% for c in cartitem  %}
+             {% for c in orderitem  %}
              <tr>
               <td class="esdev-adapt-off" align="left" style="padding:0;Margin:0;padding-left:20px;padding-right:20px;padding-top:30px">
                <table cellpadding="0" cellspacing="0" class="esdev-mso-table" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;width:560px">
