--- a/templates/products/base.html
+++ b/templates/products/base.html
@@ -36,20 +36,13 @@
                 </a>
             </div>
             <div class="col-lg-6 col-6 text-left">
-                <form action="">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for products">
-                        <div class="input-group-append">
-                            <span class="input-group-text bg-transparent text-primary">
-                                <i class="fa fa-search"></i>
-                            </span>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            {{request.user.id.cart_set.id}}
-            <div class="col-lg-3 col-6 text-right">
+                {% block search %}
+            
+                {% endblock %}
                 
+            </div>
+            <div class="col-lg-3 col-6 text-right">
+                {% if user.is_authenticated  %}
                 <a href="{% url 'order' user.id %}" class="btn border">
                     <i class="bi bi-bag-check-fill text-primary"></i>
                     
@@ -59,7 +52,7 @@
                    
                 </a>
                 {% if user.groups.all.0.name == 'product_admin' %}
-                <a href="{% url 'ownerorder' user.id %}" class="btn border">
+                <a href="{% url 'ownerorder' user.id %}" class="btn border ">
                     <img src="{% static 'images/order-delivery.png' %}" alt="" style="width: 16px; height: 16px;">
                     
                 </a>
@@ -70,6 +63,7 @@
                  <a href="{% url 'cprofile' request.user.id %}" class="rounded-0 border border-5 text-primary">
                     <img src="{{request.user.profile.url}}" class="rounded-5  text-primary" id="profileimg" alt="">
                 </a> 
+                {% endif %} 
                 {% endif %} 
             </div>
         </div>
@@ -85,7 +79,7 @@
 
 
             
-            <div class="col-lg-9">
+            <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
                     <a href="" class="text-decoration-none d-block d-lg-none">
                         <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
@@ -141,7 +135,7 @@
                 <p class="mb-2"><i class="fa fa-envelope text-primary mr-3"></i>info@example.com</p>
                 <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+012 345 67890</p>
             </div>
-            <div class="col-lg-8 col-md-12">
+            <div class="col-lg-4 col-md-4">
                 <div class="row">
                     <div class="col-md-4 mb-5">
                         <h5 class="font-weight-bold text-dark mb-4">Quick Links</h5>
@@ -154,46 +148,25 @@
                             <a class="text-dark" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-5">
-                        <h5 class="font-weight-bold text-dark mb-4">Quick Links</h5>
-                        <div class="d-flex flex-column justify-content-start">
-                            <a class="text-dark mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                            <a class="text-dark mb-2" href="shop.html"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
-                            <a class="text-dark mb-2" href="detail.html"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
-                            <a class="text-dark mb-2" href="cart.html"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
-                            <a class="text-dark mb-2" href="checkout.html"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
-                            <a class="text-dark" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-5">
-                        <h5 class="font-weight-bold text-dark mb-4">Newsletter</h5>
-                        <form action="">
-                            <div class="form-group">
-                                <input type="text" class="form-control border-0 py-4" placeholder="Your Name" required="required" />
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control border-0 py-4" placeholder="Your Email"
-                                    required="required" />
-                            </div>
-                            <div>
-                                <button class="btn btn-primary btn-block border-0 py-3" type="submit">Subscribe Now</button>
-                            </div>
-                        </form>
-                    </div>
                 </div>
+                
+            </div>
+            <div class="col-md-4 mb-5">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum quos culpa aut quaerat consequuntur dicta perspiciatis, officiis, esse, magni distinctio adipisci quidem laborum nostrum voluptatibus maiores maxime aperiam tenetur commodi?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus temporibus voluptatem nesciunt fugiat voluptate explicabo quos est tempora sequi! Pariatur est nobis, aliquid debitis nulla quia maxime praesentium minima error?</p>
             </div>
         </div>
         <div class="row border-top border-light mx-xl-5 py-4">
             <div class="col-md-6 px-xl-0">
                 <p class="mb-md-0 text-center text-md-left text-dark">
-                    &copy; <a class="text-dark font-weight-semi-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed
+                    &copy; <a class="text-dark font-weight-semi-bold" href="#">One click-pick</a>. All Rights Reserved. Designed
                     by
                     <a class="text-dark font-weight-semi-bold" href="https://htmlcodex.com">HTML Codex</a><br>
                     Distributed By <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
                 </p>
             </div>
             <div class="col-md-6 px-xl-0 text-center text-md-right">
-                {% comment %} <img class="img-fluid" src="img/payments.png" alt=""> {% endcomment %}
+                
             </div>
         </div>
     </div>
