--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -1,4 +1,6 @@
 {% extends 'products/base.html' %}
+{% load custom_tag %}
+{% load widget_tweaks %}
 {% block content %}
 <div class="container">
     <h1 class="mt-5">Products</h1>
@@ -23,7 +25,7 @@
         <tbody>
         {% comment %} {{products}} {% endcomment %}
         
-            {% for p in products %}
+            {% for p in page_obj %}
             <tr>
                 <td>{{p.name}}</td>
                 {% comment %} <td><img src="{{p.image.url}}" alt=""></td> {% endcomment %}
@@ -60,6 +62,45 @@
         </tbody>
     </table>
 </div>
-
+<div class="col-12 pb-1">
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-center mb-3">
+          <li class="page-item ">
+              {% if page_obj.has_previous %}
+          
+          <a class="page-link" href="{% my_url page_obj.previous_page_number 'page' request.GET.urlencode %}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+              <span class="sr-only">Previous</span> 
+              
+          </a>
+          {% endif %}
+      </li>
+      
+      {% comment %} {% with s = page. %} {% endcomment %}
+      {% for page in page_obj.paginator.page_range %}
+      {% if page_obj.number == page %}
+      <li class="page-item active">
+          <a class="page-link" href="{% my_url page 'page' request.GET.urlencode %}">
+              {{page}}</a></li>
+      {% else %}
+      <li class="page-item ">
+          <a class="page-link" href="{% my_url page 'page' request.GET.urlencode %}">
+              {{page}}</a></li>
+      {% endif %}  
+      
+      {% endfor %}
+        
+        
+        {% comment %} {% endwith %} {% endcomment %}
+      
+      {% if page_obj.has_next  %}
+          <a class="page-link" href="{% my_url page_obj.next_page_number 'page' request.GET.urlencode %}" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span></a>
+        </li>
+        {% endif %}
+      </ul>
+    </nav>
+</div>
 
 {% endblock %}
