--- a/templates/products/shop.html
+++ b/templates/products/shop.html
@@ -1,20 +1,33 @@
 {% extends 'products/base.html' %}
 {% load custom_tag %}
 {% load widget_tweaks %}
-{% block category %}
-<div class="col-lg-3 d-none d-lg-block">
-    <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
-    </nav>
-</div>
-{% endblock  %}
 {% block content %}
 <!-- Shop Start -->
 <div class="container-fluid pt-5">
     <div class="row px-xl-5">
         <!-- Shop Sidebar Start -->
+        
           <div class="col-lg-3 col-md-12">
               <form action="" method="GET" id="filterform">
               <!-- Price Start -->
+              <div class="input-group mb-5">
+                {% if s %}
+                <input type="text" class="form-control" id="search" value ={{s}} name="search" placeholder="Search by name">
+                {% else %}
+                <input type="text" class="form-control" id="search"  name="search" placeholder="Search by name">
+                {% endif %}
+                
+                    <div class="input-group-append">
+                       
+                        <button class="btn btn-primary" onclick="finalurl()"  type=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                            </svg>
+                        </button> 
+                        {% comment %} <i class="bi bi-search" onclick="finalurl()"></i> {% endcomment %}
+                        {% comment %} </span> {% endcomment %}
+                    </div>
+                
+            </div>
               <div class="border-bottom mb-4 pb-4">
                   <h5 class="font-weight-semi-bold mb-4">Filter by category</h5>
                   {% render_field category_filter.form.category class="btn shadow-none border d-flex align-items-center justify-content-between text-dark   w-100" %}
@@ -28,19 +41,19 @@
                   <h5 class="font-weight-semi-bold mb-4">Filter by size</h5>
                   
                   <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                      <input type="checkbox" class="custom-control-input" value = "allsize" name ="size"  id="size-all">
+                      <input type="checkbox" class="custom-control-input" {% if 'allsize' in size %} checked {% endif %} value = "allsize" name ="size"  id="size-all">
                       <label class="custom-control-label" for="size-all">All Size</label>
                       
                   </div>
-                  {% for s in size  %}
+                  {% for s in sizes  %}
                   <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                      <input type="checkbox" class="custom-control-input" name ="size" value = "{{s.name}}"  id="{{s.id}}">
+                      <input type="checkbox" class="custom-control-input" {% if s.name in size %} checked {% endif %} name ="size" value = "{{s.name}}"  id="{{s.id}}">
                       <label class="custom-control-label" for="{{s.id}}">{{s.name}}</label>
                       
                   </div>
                   {% endfor %}
               </div>
-              <input type="submit" class="btn btn-dark" value ="Apply">
+              <input type="submit" class="btn btn-dark"  value ="Apply">
               </form>
           </div>
           
@@ -53,25 +66,10 @@
         <div class="col-lg-9 col-md-12">
             <div class="row pb-3">
                 <div class="col-12 pb-1">
+                    <div id="url"></div>
                     <div class="d-flex align-items-center justify-content-between mb-4">
                         <form action="" method="GET">
-                            <div class="input-group">
-                                {% if s %}
-                                <input type="text" class="form-control" value ={{s}} name="search" placeholder="Search by name">
-                                {% else %}
-                                <input type="text" class="form-control" name="search" placeholder="Search by name">
-                                {% endif %}
-                                
-                                <div class="input-group-append">
-                                    {% comment %} <span class="input-group-text bg-transparent text-primary"> {% endcomment %}
-                                      <button class="btn btn-primary" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                                          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                                        </svg>
-                                      </button>
-                                    {% comment %} </span> {% endcomment %}
-                                </div>
-                                
-                            </div>
+                            
                             
                         </form>
                     </div>
@@ -92,7 +90,6 @@
                       </div>
                       <div class="card-footer d-flex justify-content-between bg-light border">
                           <a href="{% url 'detail' p.id %}" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
-                          <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
                       </div>
                   </div>
               </div>
@@ -143,7 +140,19 @@
       <!-- Shop Product End -->
   </div>
 </div>
-
+<script type="text/javascript">
+    function finalurl() {
+        
+        var url = new URL(window.location.href);
+        console.log(url)
+        s = "&search="
+        s= url.search+s
+        var val = document.getElementById("search").value
+        s= s+val
+        url.search = s.toString();
+        document.getElementById("url").value =  url.search
+      }
+</script>
 <!-- Shop End -->
 
 {% endblock %}
