--- a/templates/order/payment.html
+++ b/templates/order/payment.html
@@ -88,7 +88,8 @@
                                     data-prefill.email="{{order.user}}"
                                     data-theme.color="#F37254"
                                 ></script>
-                                {% comment %} <input type="submit" class="razorpay-payment-button btn btn-primary" custom="Hidden Element" name="hidden"/> {% endcomment %}
+                                <input type="submit" for="#pay" custom="Hidden Element" name="hidden"/>
+
                             </form>
                         </div>
                         
