--- a/static/css/login.css
+++ b/static/css/login.css
@@ -7,15 +7,15 @@
   font-family: 'Poppins', sans-serif;
 }
 body{
-
+  height: 110vh;
   width: 100%;
   background: #674d4d;
 }
 .container{
-  position: absolute;
-  /* top: 50%; */
-  left: 35%;
-  /* transform: translate(-50%,-50%); */
+  position: relative;
+  top: 50%;
+  left: 15%;
+  transform: translate(-50%,-50%);
   max-width: 430px;
   width: 100%;
   background: #fff;
