--- a/templates/order/checkout.html
+++ b/templates/order/checkout.html
@@ -3,7 +3,7 @@
 {% load widget_tweaks %}
 {% block content %}
 <div class="container">
-    <h1 class="mb-4 display-5 font-weight-semi-bold" >{{name}}</h1>
+    <h1 class="mb-4 display-5 font-weight-semi-bold" >Checkout Form</h1>
     
             <div class="contact-form">
                 <div id="success"></div>
