--- a/templates/order/success.html
+++ b/templates/order/success.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Document</title>
     <style>
         body{
-            background-image: url("/static/images/payment-successful.avif");
-            background-repeat: no-repeat;
+            background-image: url("/static/images/payment-successful.avif")  no-repeat center center/ cover;
+            height:100vh;
             width: 100%;
             
         }
@@ -24,7 +25,8 @@
 </head>
 <body >
         <div class="center">
-            <a href="{% url 'index' %}">Return to home</a>
+            <a class="btn btn-danger" href="{% url 'index' %}">Return to home</a>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
