--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -23,7 +23,7 @@
     {% if pr %}
         <div class="row px-xl-5 pb-3"> 
             {% for p in pr %}
-            <div class="col-lg-12 col-md-12 col-sm-12 pb-1">
+            <div class="col-lg-4 col-md-4 col-sm-4 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
                         <a href="{% url 'detail' p.id %}">
@@ -119,7 +119,7 @@
                     <p class="text-right">{{s.products_set.count}} Products</p>
                     
                     <a href="{% url 'category' s.id %}" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="{{s.products_set.all.0.image.url}}" alt="">
+                        <img class="card-img" src="{{s.products_set.all.0.image.url}}" alt="">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">{{s.name}}</h5>
                 </div>
